--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-    "name": "application-name"
+    "name": "weiair"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
       "express": "2.5.8"
     , "jade": ">= 0.0.1"
+    , "sha1": ">= 1.0.1"
+    ,"connect": "2.7.4"
+    ,"wechat": ">=0.3.5"
   }
 }
