--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "weiair"
-  , "version": "0.0.1"
+  , "version": "0.0.2"
   , "private": true
   , "dependencies": {
       "express": "2.5.8"
@@ -8,7 +8,9 @@
     , "sha1": ">= 1.0.1"
     ,"connect": "2.7.4"
     ,"wechat": ">=0.3.5"
-    , "jquery": ">= 1.8.3"
+    , "chineseaqi": ">= 0.0.2"
     , "ejs": ">= 0.8.3"
+    , "mongojs": ">= 0.0.1"
+    , "dateformat": ">= 0.9.0-1.2.3"
   }
 }
