--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
     , "ejs": ">= 0.8.3"
     , "mongojs": ">= 0.0.1"
     , "dateformat": ">= 0.9.0-1.2.3"
+    , "chinesecities": ">= 0.0.1"
   }
 }
